2008-01-01  Peter Landgren <peter.talken@telia.com>
    * src/plugins/rel_sv.py: Added some comments

2008-01-01  Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditFamily.py: Enabled tooltips on person edit buttons
	bug #1501

2008-01-01  Brian Matherly <brian@gramps-project.org>
	* src/gramps_main.py:
	* src/PluginUtils/_MenuOptions.py:
	Refinement of "Center Person" selection for reports. Now only use one 
	dialog.